--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,24 @@
-/* write your override styles here */
+#wall .tag-1 {
+    display: none;
+  }
+  body #wall #tag-2 {
+    display: none;
+  }  
+  #wall .parent {
+    display: none;
+  }
+  #tag-3 .slick wicked {
+    display: none;
+  }
+  #wall .tag-1 {
+    display: none;
+  }
+  #wall #tag-3.slick.wicked {
+    display: none;
+  }
+  #wall #tag-2 {
+    display: none;
+  } 
+
+
+  
